--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,10 +30,10 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "daisyui": "^5.0.25",
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^4",
     "typescript": "^5"
   }
 }
